Regression: Cursor is not seen immediately in find in box

In the previous cl, https://chromium-review.googlesource.com/608628, I updated
the cursor height be to (visible_bound.height - 2y) to avoid to show cursor
longer than the textfield. However, when the find in box slowly appears on the
screen, the height of the visible_bounds is 0 at the start of the animation. 
As a result, the height of the text cursor is 0 at the first blink. A
verification of height of visible bounds is added before updating the height
of the text cursor.

Bug: 757763
Change-Id: I15b9fdbcee84d2e417bc97061c3a1ad70ff08f55
Reviewed-on: https://chromium-review.googlesource.com/641653
Commit-Queue: Yi Xu <yiyix@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498666}
Former-commit-id: d2b959d967c8219d4752d5c70362eb89fa5d1fbc