ui/views/controls/textfield/textfield.cc
@@ -1984,7 +1984,7 @@ void Textfield::UpdateCursorViewPosition() {
   location.set_x(GetMirroredXForRect(location));
   location.set_height(
       std::min(location.height(),
-               GetVisibleBounds().height() - location.y() - location.y()));
+               GetContentsBounds().height() - location.y() - location.y()));
   cursor_view_.SetBoundsRect(location);
 }
 
